fix nav icon animation on mobile

--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -101,7 +101,6 @@ $dot-size: 5px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    transition: all $transition, background-color 0s, box-shadow 0s, left 0s;
   }
 
   &:after {
@@ -137,6 +136,11 @@ $dot-size: 5px;
 
   @include respond-to($tablet) {
     @include size($btn-size);
+
+    &::after,
+    &::before {
+      transition: all $transition, background-color 0s, box-shadow 0s, left 0s;
+    }
   }
 }
 
